--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,11 @@ go:
   - 1.9.x
   - tip
 
+install:
+  - go get -u github.com/golang/lint/golint
+  - go get -u golang.org/x/tools/cmd/goimports
+
 script:
+  - test -z $(goimports -l nethttp)
+  - golint -set_exit_status ./...
   - go test -v -cover -race ./...
