--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ go:
 install:
   - go get -u github.com/golang/lint/golint
   - go get -u golang.org/x/tools/cmd/goimports
+  - go get ./...
 
 script:
   - test -z $(goimports -l nethttp)
