--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,12 @@ go:
   - tip
 
 install:
-  - go get -u github.com/golang/lint/golint
-  - go get -u golang.org/x/tools/cmd/goimports
-  - go get ./...
+  - go get github.com/golang/lint/golint
+  - go get golang.org/x/tools/cmd/goimports
+  - go get github.com/gin-gonic/gin
+  - go get github.com/opentracing/opentracing-go
+  - github.com/uber/jaeger-client-go
+  - github.com/uber/jaeger-client-go/zipkin
 
 script:
   - test -z $(goimports -l nethttp)
