--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ install:
   - go get github.com/uber/jaeger-client-go/zipkin
 
 script:
-  - test -z $(goimports -l nethttp)
+  - test -z $(goimports -l .)
   - go test -v -cover -race ./...
