--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,8 @@ go:
   - 1.9.x
   - tip
 
-install:
+before_install:
   - go get golang.org/x/tools/cmd/goimports
-  - go get github.com/gin-gonic/gin
-  - go get github.com/opentracing/opentracing-go
   - go get github.com/uber/jaeger-client-go
   - go get github.com/uber/jaeger-client-go/zipkin
 
